k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-aer-service
spec:
  type: NodePort
  selector:
    app: demo-app-aer-pods
  ports:
    - port: 7777
      targetPort: 9999
      nodePort: 30000
