k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: aer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-aer-service  # nombre de tu Service
                port:
                  number: 7777          # puerto de tu Service
